--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,11 +1,12 @@
 // COLORS
-$color-primary: #41c5dc;
-$color-secondary:#5ebc64;
-$color-tertiary:#c5e8fb;
-$color-button:#28aae4;
+$color-primary: #191970;
+$color-secondary:linear-gradient(45deg, #CD7F32, #ffd799);
+$color-tertiary:#CD7F32;
+$color-quaternary:#ffd799;
+$color-button:#191970;
 $color-text:#221f20;
-$color-grey:#f0f1f1;
-$color-white: #fff;
+$color-grey:#D8D8D8;
+$color-white: #FDF6EC;
 $color-black: #000;
 
 $fontPrimary:"Poppins", sans-serif;
