--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,3 +19,5 @@
 @import "./pages/about";
 @import "./pages/pricing";
 @import "./pages/program";
+@import "./pages/whylumina";
+@import "./pages/flm";
