--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -36,53 +36,56 @@
 }
 
 @mixin globalBtnOne{
-    background: $color-button;
-    color: $color-white;
+    background: transparent;
+    color: $color-tertiary;
     text-transform: capitalize;
     padding: 6px 16px;
+    border: 2px solid $color-tertiary;
     display: inline-block;
     text-decoration: none;
     transition: 0.4s;
+    font-weight: bold;
     &:hover{
         text-decoration: none;
-        background: $color-primary;
+        background: $color-tertiary;
+        color: $color-white;
     }
 }
 
-@mixin globalBtnTHree{
-    background: $color-button;
-    color: $color-white;
-    text-transform: capitalize;
-    padding: 6px 25px 6px 16px;
-    display: inline-block;
-    margin-top: 5rem;
-    text-decoration: none;
-    border-radius: 3px;
-    position: relative;
-    &::after{
-        content: "";
-        background-image: url(../images/btn-bg.png);
-        position: absolute;
-        right: -10px;
-        top: 0;
-        height: 100%;
-        width: 100%;
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: right;
-        transform: scale(1.4);
-        filter: drop-shadow(0px 0px 3px #33333384);
-    }
-    &:hover{
-        text-decoration: none;
-        color: $color-white
-    }
-}
+// @mixin globalBtnTHree{
+//     background: $color-tertiary;
+//     color: $color-white;
+//     text-transform: capitalize;
+//     padding: 6px 25px 6px 16px;
+//     display: inline-block;
+//     margin-top: 5rem;
+//     text-decoration: none;
+//     border-radius: 3px;
+//     position: relative;
+//     &::after{
+//         content: "";
+//         background-image: url(../images/btn-bg.png);
+//         position: absolute;
+//         right: -10px;
+//         top: 0;
+//         height: 100%;
+//         width: 100%;
+//         background-size: contain;
+//         background-repeat: no-repeat;
+//         background-position: right;
+//         transform: scale(1.4);
+//         filter: drop-shadow(0px 0px 3px #33333384);
+//     }
+//     &:hover{
+//         text-decoration: none;
+//         color: $color-white
+//     }
+// }
 
 @mixin globalBtnThree{
     background: transparent;
-    color: $color-button;
-    border: 1px solid $color-button;
+    color: $color-tertiary;
+    border: 1px solid $color-tertiary;
     text-transform: capitalize;
     padding: 6px 16px;
     display: inline-block;
@@ -90,9 +93,9 @@
     transition: 0.4s;
     &:hover{
         text-decoration: none;
-        background: $color-button;
+        background: $color-tertiary;
         color: $color-white;
-        border: 1px solid $color-button;
+        border: 1px solid $color-tertiary;
     }
 }
 
@@ -100,6 +103,8 @@
     @include globalBtnOne;
     border-radius: 3px;
     width: 20rem;
+    border-color: $color-white;
+    color: $color-white;
     @include respond (maxWidth575){
         width: auto;
     }
