--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css');
+
 
 @font-face {
     font-family: 'Nexa';
@@ -10,9 +12,9 @@
 }
 
 @font-face {
-    font-family: 'mostiva-bold';
-    src: url('../font/Mosvita-Bold.woff2') format('woff2'),
-        url('../font/Mosvita-Bold.woff') format('woff');
+    font-family: 'mostiva-light';
+    src: url('../font/Mosvita-light.woff2') format('woff2'),
+        url('../font/Mosvita-light.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
