--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,11 +5,40 @@
         left: 0;
         z-index: 9;
         width: 100%;
+        .container{
+            max-width: 100%;
+            padding-left: 4%;
+            padding-right: 4%;
+        }
     }
-}
+        .fixed-header{
+            @include respond (minWidth768){
+                .nav-list{
+                        flex-direction: row;
+                        padding: 0;
+                    }
+                    nav{
+                        padding: 0;
+                        align-items: center;
+                    }
+                }
+        }
+        nav{
+            @include respond (minWidth768){
+                padding-top: 30px;
+            }
+        }
+        .nav-list{
+            @include respond (minWidth768){
+                flex-direction: column-reverse;
+    padding: 30px 0 0 0;
+            }
+        }
+    }
 
 header {
     padding: 6px 0;
+
 
     &.fixed-header {
         position: fixed;
@@ -25,7 +54,7 @@ header {
 
     nav {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-between;
     }
 
