--- a/sass/pages/_program.scss
+++ b/sass/pages/_program.scss
@@ -1,6 +1,27 @@
 .curriculum-activities{
-    background: $color-tertiary;
-    .col-md-3{
+    background: $color-quaternary;
+
+    h2 {
+        position: relative;
+
+        &::after {
+            @include vector(85px, 84px);
+            top: -5rem;
+            filter: invert(1) brightness(100);
+            transform: scale(0.75);
+        }
+    }
+    .card{
+        @include respond (minWidth768){
+            flex-direction: row;
+    align-items: center;
+    gap: 3rem;
+        }
+    }
+    .row{
+        row-gap: 15px;
+    }
+    .col-md-6{
         &:not(:last-child){
             .card{
                 margin-bottom: 2rem;
@@ -13,8 +34,12 @@
         height: 100%;
         .img-wrapper{
             overflow: hidden;
-            width: 100%;
             aspect-ratio: 1;
+            border: 5px solid $color-tertiary;
+            border-radius: 100%;
+            @media screen and (min-width:575px) {
+                width: 28rem;
+            }
             img{
                 width: 100%;
                 height: 100%;
@@ -38,7 +63,7 @@
 }
 .our-facilities{
     @media screen and (min-width:900px) {
-       background-image: linear-gradient(90deg, $color-tertiary 50%, $color-white 50%);
+       background-image: linear-gradient(90deg, $color-quaternary 50%, $color-white 50%);
     }
 }
 .our-facilities #awesome_tab{
@@ -164,6 +189,7 @@
    cursor: pointer;
  }
  .curriculum{
+    
    .img-wrapper{
        height: 33rem;
        position: relative;
@@ -203,13 +229,13 @@
    }
  }
  .container.lumina-hub {
-    padding: 5rem;
+    padding: 5rem 12rem 5rem 12rem;
     text-align: center;
     .link-wrapper{
         text-align: center;
-        padding-top: 5rem;
+        padding-top: 3rem;
         a{
-            @include globalBtnTwo();
+            @include globalBtnOne();
         }
 
     }
