--- a/sass/pages/_flm.scss
+++ b/sass/pages/_flm.scss
@@ -187,7 +187,7 @@
         align-items: center;
         border: 1.5px solid var(--fcsclr);
         padding: 8px 10px;
-        background: $color-white;
+        background: #fff;
         border-radius: 40px;
         width: 350px;
         position: relative;
