--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,3 +21,5 @@
 @import "./pages/program";
 @import "./pages/whylumina";
 @import "./pages/flm";
+@import "./pages/guidingMinds";
+@import "./pages/application";
