--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,85 +1,98 @@
-.p-top{
+.p-top {
     padding-top: 7rem;
 
     @include respond(maxWidth992) {
         padding-top: 5rem;
     }
+
     @include respond(maxWidth575) {
         padding-top: 4rem;
     }
 }
 
-.p-bottom{
+.p-bottom {
     padding-bottom: 7rem;
 
     @include respond(maxWidth992) {
         padding-bottom: 5rem;
     }
+
     @include respond(maxWidth575) {
         padding-bottom: 4rem;
     }
 }
-.m-top{
+
+.m-top {
     margin-top: 7rem;
 
     @include respond(maxWidth992) {
         margin-top: 5rem;
     }
+
     @include respond(maxWidth575) {
         margin-top: 4rem;
     }
 }
 
-.m-bottom{
+.m-bottom {
     margin-bottom: 7rem;
 
     @include respond(maxWidth992) {
         margin-bottom: 5rem;
     }
+
     @include respond(maxWidth575) {
         margin-bottom: 4rem;
     }
 }
+
 .owl-nav {
     position: absolute;
     right: 0;
     bottom: 0;
-    button{
-        background: $color-primary!important;
+
+    button {
+        background: $color-primary !important;
         height: 30px;
-    width: 30px;
-        i{
+        width: 30px;
+
+        i {
             color: $color-white;
         }
     }
 }
-.img-fluid{
+
+.img-fluid {
     max-width: 100%;
     height: auto;
     object-fit: cover;
 }
-.border-bottom{
+
+.border-bottom {
     height: 5px;
     width: 100%;
     display: block;
     background: $color-tertiary;
     margin-bottom: 3rem;
 }
-.border-one{
+
+.border-one {
     width: 100%;
     display: block;
     margin-bottom: 3rem;
 }
 
-.inner-hero-section{
+.inner-hero-section {
     position: relative;
-    img{
+
+    img {
         height: calc(100vh - 70px);
         width: 100%;
         object-position: bottom;
         object-fit: cover;
     }
-    &::before{
+
+    &::before {
         content: "";
         background-image: linear-gradient(0deg, white 10%, transparent);
         position: absolute;
@@ -88,7 +101,8 @@
         width: 100%;
         height: 22%;
     }
-    h1{
+
+    h1 {
         text-transform: capitalize;
         font-size: 4.8rem;
         position: absolute;
@@ -98,17 +112,19 @@
         line-height: 1;
         margin-bottom: 0;
         width: 100%;
-    text-align: center;
-    padding: 0 10px;
+        text-align: center;
+        padding: 0 10px;
     }
-    &.register{
-        &::before{
+
+    &.register {
+        &::before {
             background-image: none;
             background-color: $color-black;
             height: 100%;
             opacity: 0.6;
         }
-        h1{
+
+        h1 {
             color: $color-white;
         }
     }
@@ -120,15 +136,18 @@ input[type="number"]:hover::-webkit-outer-spin-button {
     margin: 0;
     display: none;
 }
+
 input:-webkit-autofill {
     background-color: white !important;
     -webkit-box-shadow: 0 0 0 50px white inset !important;
     -webkit-text-fill-color: #000 !important;
 }
-.primary-list{
-    li{
+
+.primary-list {
+    li {
         position: relative;
-        &::before{
+
+        &::before {
             content: "";
             background: $color-text;
             position: absolute;
@@ -139,7 +158,8 @@ input:-webkit-autofill {
             height: 1rem;
             border-radius: 50%;
         }
-        &:not(:last-child){
+
+        &:not(:last-child) {
             padding-bottom: 1rem;
         }
     }
@@ -148,11 +168,61 @@ input:-webkit-autofill {
 .modal-backdrop {
     z-index: 9;
 }
-.internal-link{
+
+.internal-link {
     color: $color-tertiary;
     text-decoration: none;
     font-weight: bold;
-    &:hover{
+
+    &:hover {
         text-decoration: underline;
+    }
+}
+
+blockquote {
+    display: block;
+    background: #fff;
+    padding: 15px 20px 15px 45px;
+    margin: 3rem 0 0 ;
+    position: relative;
+    font-size: 1.8rem!important;
+    line-height: 1.4;
+    color: #666;
+    text-align: justify;
+    border-left: 15px solid $color-primary;
+    border-right: 2px solid $color-primary;
+    box-shadow: 2px 2px 15px #ccc;
+
+    &::before {
+        content: "\201C";
+        font-family: Georgia, serif;
+        font-size: 60px;
+        font-weight: bold;
+        color: #999;
+        position: absolute;
+        left: 10px;
+        top: 0;
+    }
+
+    &::after {
+        content: "";
+    }
+
+    em {
+        font-style: italic;
+        display: block;
+        text-align: right;
+        font-size: 1.4rem;
+        width: max-content;
+        background: $color-primary;
+        color: $color-white;
+        margin-left: auto;
+        margin-top: 1.5rem;
+        padding: 8px 20px;
+        &::before{
+            content: "~";
+            display: inline-block;
+            margin-right: 3px;
+        }
     }
 }
