--- a/sass/pages/_program.scss
+++ b/sass/pages/_program.scss
@@ -91,6 +91,21 @@
    color: $color-text;
    width: 100%;
    transition: all 0.5s ease;
+   span{
+    display: inline-block;
+    border: 1px solid $color-primary;
+    color: $color-primary;
+    padding: 3px 12px;
+    border-radius: 40px;
+    font-size: 14px;
+    transition: all 0.5s ease;
+   }
+   &:hover{
+    span{
+        background: $color-primary;
+        color: $color-white;
+    }
+   }
 }
 
 .our-facilities .d-flex{
